Temp fix for settings error.

--- a/lib/css/newstyle.css
+++ b/lib/css/newstyle.css
@@ -44,3 +44,5 @@ span.charts{font-size:.7em;}
 
 .rsslink img{border:0}
 .rsslink:hover{background-color:#fff;text-decoration:none;}
+
+img{border:0;}
