Added a floating (nav) footer! Probably!
Signed-off-by: Neo Melonas <neo@neomelonas.com>

--- a/lib/css/newstyle.css
+++ b/lib/css/newstyle.css
@@ -42,6 +42,19 @@ span.charts{font-size:.7em;}
 #footer{text-align:right;}
 #footer p{color:#770000;font-size:.8em;}
 
+
+#footbar{
+	position:fixed;
+	bottom:0;
+	text-align:center;
+	height:25px;
+	background-color:#ffffee;
+	-moz-box-shadow: 3px 3px 3px #666;
+	-webkit-box-shadow: 3px 3px 3px #666;
+	box-shadow: 3px 3px 3px #666;
+}
+#footbar a{text-decoration:none;}
+
 .rsslink img{border:0}
 .rsslink:hover{background-color:#fff;text-decoration:none;}
 
