Signed-off-by: Neo Melonas <neo@neomelonas.com>

--- a/lib/css/newstyle.css
+++ b/lib/css/newstyle.css
@@ -45,20 +45,20 @@ span.charts{font-size:.7em;}
 
 #footbar{
 	position:fixed;
-	bottom:5px;
+	bottom:0px;
 	text-align:center;
 	height:25px;
 	width:90%;
 	background-color:#ffffff;
-	-moz-box-shadow: 3px 3px 3px #666;
-	-webkit-box-shadow: 3px 3px 3px #666;
-	box-shadow: 3px 3px 3px #666;
+	-moz-box-shadow: 3px -3px 3px #666;
+	-webkit-box-shadow: 3px -3px 3px #666;
+	box-shadow: 3px -3px 3px #666;
 }
-
+#footbar ul, #footbar li{padding:0 5px;margin:0;}
 #footbar a{text-decoration:none;}
 
 .rsslink img{border:0}
 .rsslink:hover{background-color:#fff;text-decoration:none;}
 
 img{border:0;}
-.backup{float:right;position:fixed;bottom:5px;right:5px;}
+.backup{float:right;}/*position:fixed;bottom:5px;right:5px;}*/
