--- a/lib/css/newstyle.css
+++ b/lib/css/newstyle.css
@@ -46,9 +46,11 @@ span.charts{font-size:.7em;}
 #footbar{
 	position:fixed;
 	bottom:0px;
+	left:5%;
+	right:5%;
 	text-align:center;
 	height:25px;
-	width:90%;
+	
 	background-color:#ffffff;
 	-moz-box-shadow: 3px -3px 3px #666;
 	-webkit-box-shadow: 3px -3px 3px #666;
