--- a/lib/css/newstyle.css
+++ b/lib/css/newstyle.css
@@ -50,13 +50,12 @@ span.charts{font-size:.7em;}
 	right:5%;
 	text-align:center;
 	height:25px;
-	
 	background-color:#ffffff;
-	-moz-box-shadow: 3px -3px 3px #666;
-	-webkit-box-shadow: 3px -3px 3px #666;
-	box-shadow: 3px -3px 3px #666;
+	-moz-box-shadow: 2px -3px 4px #666;
+	-webkit-box-shadow: 2px -3px 4px #666;
+	box-shadow: 2px -3px 4px #666;
 }
-#footbar ul, #footbar li{padding:0 5px;margin:0;}
+#footbar ul, #footbar li{padding:3px 5px;margin:0;}
 #footbar a{text-decoration:none;}
 
 .rsslink img{border:0}
