FooterNavBar GO!! I *think*
Signed-off-by: Neo Melonas <neo@neomelonas.com>

--- a/lib/css/newstyle.css
+++ b/lib/css/newstyle.css
@@ -44,6 +44,7 @@ span.charts{font-size:.7em;}
 
 
 #footbar{
+	border:1px solid #666666;
 	position:fixed;
 	bottom:0px;
 	left:4%;
@@ -51,12 +52,9 @@ span.charts{font-size:.7em;}
 	text-align:center;
 	height:30px;
 	background-color:#ffffff;
-	-moz-box-shadow: 2px -3px 4px #666;
-	-moz-box-shadow: 2px -3px 4px #666;
-	-webkit-box-shadow: 2px -3px 4px #666;
-	-webkit-box-shadow: 2px -3px 4px #666;
-	box-shadow: 2px -3px 4px #666;
-	box-shadow: 2px -3px 4px #666;
+	-moz-box-shadow: -2px -3px 4px #666;
+	-webkit-box-shadow: -2px -3px 4px #666;
+	box-shadow: -2px -3px 4px #666;
 }
 #footbar ul, #footbar li{padding:6px 6px;margin:0;}
 #footbar a{text-decoration:none;}
