FooterNavBar GO!! I *think*
Signed-off-by: Neo Melonas <neo@neomelonas.com>

--- a/lib/css/newstyle.css
+++ b/lib/css/newstyle.css
@@ -45,6 +45,7 @@ span.charts{font-size:.7em;}
 
 #footbar{
 	border:1px solid #666666;
+	border-bottom:0;
 	position:fixed;
 	bottom:0px;
 	left:4%;
