--- a/lib/css/iestyle.css
+++ b/lib/css/iestyle.css
@@ -13,7 +13,7 @@ h1{font-size:2em;}
 
 img{border:0;}
 #container{width:900px;margin:50px auto;}
-#nav ul li{list-style:none;display:inline;}
+.nav ul li{list-style:none;display:inline;}
 .item {padding:5px 0;border-bottom:1px solid #999;}
 p{font-size:.7em;}
 
@@ -43,7 +43,7 @@ span.charts{font-size:.7em;}
 	height:30px;
 	background-color:#ffffff;
 }
-#footbar{filter: progid:DXImageTransform.Microsoft.Shadow(color=#666666,direction=135);}
+#footbar{filter: progid:DXImageTransform.Microsoft.Shadow(color=#666666,direction=45);}
 
 .rsslink img{border:0}
 .rsslink:hover{background-color:#fff;text-decoration:none;}
