--- a/lib/css/newstyle.css
+++ b/lib/css/newstyle.css
@@ -22,7 +22,7 @@ h1.title{padding:15px 0;}
 #feeds li a:hover{background-color:#fff;color:#326EA1;padding-left:5px;}
 #feeds img{border:0;}
 #container{width:900px;margin:50px auto;}
-nav li,#nav li{list-style:none;display:inline;}
+nav li,.nav li{list-style:none;display:inline;}
 .item {padding:5px 0;border-bottom:1px solid #999;}
 p{font-size:.7em;}
 
