--- a/lib/css/newstyle.css
+++ b/lib/css/newstyle.css
@@ -66,3 +66,5 @@ span.charts{font-size:.7em;}
 details{font-size:.5em;}
 img{border:0;}
 .backup{float:right;}/*position:fixed;bottom:5px;right:5px;}*/
+
+.lies{display:none;}
