--- a/lib/css/ministyle.css
+++ b/lib/css/ministyle.css
@@ -1,7 +1,7 @@
 body {
 	font:1em Verdana, sans-serif;
 	color:#333;
-	background-color:#fff;
+	background-color:#F8FAF0;
 	padding:0;
 }
 a {color:#326EA1;text-decoration:underline;padding:0 1px;}
