--- a/lib/css/ministyle.css
+++ b/lib/css/ministyle.css
@@ -1,8 +1,8 @@
 body {
-	font:1em Verdana, sans-serif;
-	color:#333;
-	background-color:#F8FAF0;
-	padding:0;
+    font:1em Verdana, sans-serif;
+    color:#333;
+    background-color:#F8FAF0;
+    padding:0;
 }
 a {color:#326EA1;text-decoration:underline;padding:0 1px;}
 a:hover{color:#6699cc;}
@@ -25,20 +25,27 @@ a.title{color:#336699;font-size:1.5em;text-decoration:none;}
 #footer p{color:#770000;font-size:.8em;}
 
 #footbar{
-	border:1px solid #666666;
-	border-bottom:0;
-	position:fixed;
-	bottom:0px;
-	left:4%;
-	right:4%;
-	text-align:center;
-	height:30px;
-	background-color:#ffffff;
-	-moz-box-shadow: 2px -3px 4px #666;
-	-webkit-box-shadow: 2px -3px 4px #666;
-	box-shadow: 2px -3px 4px #666;
+    border:1px solid #666666;
+    border-bottom:0;
+    position:fixed;
+    left:4%;
+    right:4%;
+    text-align:center;
+    height:30px;
+    background-color:#ffffff;
+    -moz-box-shadow: 2px -3px 4px #666;
+    -webkit-box-shadow: 2px -3px 4px #666;
+    box-shadow: 2px -3px 4px #666;
 }
 #footbar ul, #footbar li{padding:6px 6px;margin:0;}
 #footbar a{text-decoration:none;}
+details{font-size:.5em;}
+.backup{float:right;}
 
-.backup{float:right;}/*position:fixed;bottom:5px;right:5px;}*/
+.barhide{
+    bottom:-25px;
+}
+.barshow{
+    bottom:0;
+}
+li a{font-family:"Times New Roman",serif;font-size:1.2em;}
