--- a/lib/css/newstyle.css
+++ b/lib/css/newstyle.css
@@ -44,18 +44,17 @@ span.charts{font-size:.7em;}
 
 
 #footbar{
-	border:1px solid #666666;
-	border-bottom:0;
-	position:fixed;
-	bottom:0px;
-	left:4%;
-	right:4%;
-	text-align:center;
-	height:30px;
-	background-color:#ffffff;
-	-moz-box-shadow: 2px -3px 4px #666;
-	-webkit-box-shadow: 2px -3px 4px #666;
-	box-shadow: 2px -3px 4px #666;
+    border:1px solid #666666;
+    border-bottom:0;
+    position:fixed;
+    left:4%;
+    right:4%;
+    text-align:center;
+    height:30px;
+    background-color:#ffffff;
+    -moz-box-shadow: 2px -3px 4px #666;
+    -webkit-box-shadow: 2px -3px 4px #666;
+    box-shadow: 2px -3px 4px #666;
 }
 #footbar ul, #footbar li{padding:6px 6px;margin:0;}
 #footbar a{text-decoration:none;}
@@ -67,3 +66,10 @@ details{font-size:.5em;}
 img{border:0;}
 .backup{float:right;}/*position:fixed;bottom:5px;right:5px;}*/
 .lies{display:none;}
+
+.barhide{
+    bottom:-25px;
+}
+.barshow{
+    bottom:0;
+}
