Got SASS working on test server, moved compiled stuff to gitignoreeverything is wonderful just accept that. oxinai <oxinai@master-chief.net>

--- a/css/sass/digest.scss
+++ b/css/sass/digest.scss
@@ -16,16 +16,16 @@ article {
     a {
 	@include colorChange($linkColorChange);
 	text-decoration: none;
-	&link, &visited { color:$linkColor; }
-	&hover { color: $linkAlt; }
+	&:link, &:visited { color:$linkColor; }
+	&:hover { color: $linkAlt; }
     }
     footer { 
-	color: $mainColor;
-	p {
-	    float:
-	    left; padding-left: 3px;
-	    display:inline-block;
-	}
+    	color: $mainColor;
+	    p {
+	        float:
+    	    left; padding-left: 3px;
+    	    display:inline-block;
+    	}
     }
 }
 span.when {border-bottom: 1px dotted #444;}
