--- a/css/sass/digest.scss
+++ b/css/sass/digest.scss
@@ -10,9 +10,11 @@ $footerLinkAlt: #900;
     -moz-transition:color $transSpeed ease-out;
 }
 body {font-size: $mainFontSize;}
+div { float: left; position: relative; padding-left: 5px; }
+div#rightNow { float:none; padding-left: 40%; }
 article {
     clear: both;
-    header { float: left; }
+    header, footer, h1, p { display: inline; }
     p { display: none; }
     a {
 	@include colorChange($linkColorChange);
@@ -23,9 +25,8 @@ article {
     footer { 
     	color: $mainColor;
 	    p {
-	        float:
-    	    left; padding-left: 3px;
-    	    display:inline-block;
+	        padding-left: 3px;
+    	    display:inline;
     	}
     	a { 
     	    &:link, &:visited { color: $linkColor; }
@@ -34,4 +35,5 @@ article {
     	}
     }
 }
-span.when {border-bottom: 1px dotted #444;}
+span.when { border-bottom: 1px dotted #444; }
+
